:beers: 添加代码执行配置